@@ -86,7 +86,7 @@ public class DeploymentScenario {
         }
         Collections.sort(managedDeployment, new Comparator<Deployment>() {
             public int compare(Deployment o1, Deployment o2) {
-                return new Integer(o1.getDescription().getOrder()).compareTo(o2.getDescription().getOrder());
+                return Integer.valueOf(o1.getDescription().getOrder()).compareTo(o2.getDescription().getOrder());
             }
         });
 
@@ -103,7 +103,7 @@ public class DeploymentScenario {
         }
         Collections.sort(managedDeployment, new Comparator<Deployment>() {
             public int compare(Deployment o1, Deployment o2) {
-                return new Integer(o2.getDescription().getOrder()).compareTo(o1.getDescription().getOrder());
+                return Integer.valueOf(o2.getDescription().getOrder()).compareTo(o1.getDescription().getOrder());
             }
         });
 
@@ -131,7 +131,7 @@ public class DeploymentScenario {
         // sort them by order
         Collections.sort(startupDeployments, new Comparator<Deployment>() {
             public int compare(Deployment o1, Deployment o2) {
-                return new Integer(o1.getDescription().getOrder()).compareTo(o2.getDescription().getOrder());
+                return Integer.valueOf(o1.getDescription().getOrder()).compareTo(o2.getDescription().getOrder());
             }
         });
 
